# ReCoN

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: wheels.yml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/API/: explore_multicell.rst  infer_grn.rst  load_data.rst
docs/source/_static/: custom.css
docs/source/recon_examples/: 1.recon_molecular_treatment.ipynb  2.recon_multicellular_coordination.ipynb  3.recon_molecular_cascades.ipynb  3.recon_molecular_cascades_new.ipynb  4.recon_hummus.ipynb
docs/source/recon_explained/: get_ready.rst  overview.rst  receptor_gene_db.rst
docs/tools/: patch_plotly_outputs.py
figures/: README.md
scripts/: upload_to_zenodo.sh
src/recon/: __init__.py  utils.py
src/recon/data/: __init__.py  load_data.py
src/recon/data/receptor_genes/: add_receptor_genes.py
src/recon/explore/: recon.py
src/recon/infer_grn/: layers.py
src/recon/plot/: __init__.py  plot_multicell.py  plot_results.py  sankey_paths.py
tests/: README.md  __init__.py  conftest.py  test_celltype.py  test_infer_grn.py  test_lambda.py  test_load_data.py  test_multicell.py  test_plot.py  test_plot_results.py  test_sankey.py  test_sankey_extended.py  test_utils.py
